# Safe-Discover

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  ca.kinncj.SafeDiscover.desktop  ca.kinncj.SafeDiscover.metainfo.xml  ca.kinncj.safediscover.policy  safe-discover-helper.sh
.github/workflows/: aur-publish.yml  build.yml  nightly.yml  release.yml
aur/: .SRCINFO  PKGBUILD
docs/: README.md  architecture.md  backends.md  build.md  configuration.md  contributing.md  qml-ui.md  security.md
src/: CMakeLists.txt  main.cpp
src/backends/: aurbackend.cpp  aurbackend.h  firmwarebackend.cpp  firmwarebackend.h  flatpakbackend.cpp  flatpakbackend.h  pacmanbackend.cpp  pacmanbackend.h  updatemanager.cpp  updatemanager.h
src/config/: safediscoverconfig.kcfg  safediscoverconfig.kcfgc
src/core/: commandrunner.cpp  commandrunner.h  logmanager.cpp  logmanager.h  packagemodel.cpp  packagemodel.h  toolchecker.cpp  toolchecker.h
src/qml/: Main.qml
src/qml/components/: ActionConfirmDialog.qml  AurRemovalDialog.qml  FirmwareDeviceCard.qml  OutputLogPanel.qml  PackageDetailsPane.qml  PackageListView.qml  PackageSearchBar.qml  StatusBanner.qml  UpdateSection.qml
src/qml/pages/: AurPage.qml  FirmwarePage.qml  FlatpakPage.qml  KdeAddonsPage.qml  RepoPage.qml  UpdatesPage.qml
src/qml/settings/: SettingsPage.qml
tests/: CMakeLists.txt  tst_commandrunner.cpp  tst_flatpakbackend.cpp  tst_pacmanbackend.cpp
